--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 id="heading">Dynamic Resume Builder</h1>
+        <h1 id="heading">Shareable Resume Builder Muhammad Osama</h1>
         <form id="resumeForm">
             <fieldset>
                 <legend>username</legend>
